<resources>
    <string name="app_name">QTB_Test</string>
    <string name="sessioneCorrente">Non hai ancora un profilo!</string>
    <string name="hello_main_fragment"></string>
    <string name="generic_digits">aãâáàbcçdeéfghiíjklmnoõôóòpqrstuvwxyz AÃÂÁÀBCÇDEÉFGHIÍJKLMNOÕÔÓÒPQRSTUVWXYZ</string>
    <string name="codice_fiscale_digits">ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="email_local_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="email_server_digits">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-.</string>
    <string name="crea_profilo_titolo">Crea nuovo profilo</string>
    <string name="crea_profilo_nome">Nome:</string>
    <string name="crea_profilo_cognome">Cognome:</string>
    <string name="crea_profilo_mail">Mail:</string>
    <string name="crea_profilo_telefono">Telefono:</string>
    <string name="crea_profilo_btn_conferma">Conferma</string>
    <string name="crea_profilo_codice_fiscale">Codice Fiscale:</string>
    <string name="crea_profilo_residenza">Residenza:</string>
    <string name="crea_profilo_via">Via:</string>
    <string name="crea_profilo_numero_civico">N° civico:</string>
    <string name="crea_profilo_cap">C.A.P.:</string>
    <string name="crea_brevetto_codice">Codice:</string>
    <string name="crea_brevetto_data_rilascio">Data rilascio:</string>
    <string name="crea_brevetto_data_scadenza">Data scadenza</string>
    <string name="crea_brevetto_btn_conferma">Conferma</string>
    <string name="brevetto_main_titolo">Nuovo brevetto</string>
    <string name="brevetto_main_intro">intro intro intro intro</string>
    <string name="brevetto_main_teoria">Attestato teoria:</string>
    <string name="brevetto_main_pratica">Attestato pratica:</string>
    <string name="brevetto_main_visita_medica">Certificato medico</string>
    <string name="brevetto_main_enac">Numero brevetto enac:</string>
    <string name="brevetto_main_inserisci">Inserisci</string>
    <string name="brevetto_main_conferma">Conferma</string>
    <string name="brevetto_teoria_titolo">Attestato Teoria</string>
    <string name="brevetto_teoria_intro">intro intro intro</string>
    <string name="brevetto_teoria_luogo">Luogo:</string>
    <string name="brevetto_teoria_data">Data:</string>
    <string name="brevetto_teoria_campo_data">Premi qui per inserire</string>
    <string name="brevetto_teoria_numero">Numero:</string>
    <string name="brevetto_teoria_conferma">Conferma</string>
    <string name="brevetto_teoria_annulla">Annulla</string>
    <string name="brevetto_pratica_titolo">Attestato Pratica</string>
    <string name="brevetto_pratica_intro">intro intro intro</string>
    <string name="brevetto_pratica_luogo">Luogo:</string>
    <string name="brevetto_pratica_data">Data:</string>
    <string name="brevetto_pratica_campo_data">Premi qui per inserire</string>
    <string name="brevetto_pratica_numero">Numero:</string>
    <string name="brevetto_pratica_conferma">Conferma</string>
    <string name="brevetto_pratica_annulla">Annulla</string>
    <string name="brevetto_visita_medica_titolo">Certificato Visita Medica</string>
    <string name="brevetto_visita_medica_intro">intro intro intro intro</string>
    <string name="brevetto_visita_medica_luogo">Luogo:</string>
    <string name="brevetto_visita_medica_data">Data:</string>
    <string name="brevetto_visita_medica_campo_data">Premi qui per inserire</string>
    <string name="brevetto_visita_medica_scadenza">Scadenza:</string>
    <string name="brevetto_visita_medica_campo_scadenza">Premi qui per inserire</string>
    <string name="brevetto_visita_medica_conferma">Conferma</string>
    <string name="brevetto_visita_medica_annulla">Annulla</string>
    <string name="profilo_aggiungi_drone">Aggiungi drone:</string>
    <string name="profilo_droni_posseduti">Droni posseduti:</string>
    <string name="profilo_conferma">Conferma</string>
    <string name="crea_drone_titolo">Crea nuova abilitazione</string>
    <string name="crea_drone_categoria">Categoria:</string>
    <string name="crea_drone_marca">Marca:</string>
    <string name="crea_drone_apr">APR:</string>
    <string name="crea_drone_spr">SPR:</string>
    <string name="crea_drone_numero_motori">Numero motori:</string>
    <string name="crea_drone_btn_aggiungi_batteria">Aggiungi Batteria</string>
    <string name="crea_drone_btn_conferma">Conferma</string>
    <string-array name="drone_categorie">
        <item>minore 2</item>
        <item>maggiore 2</item>
        <item>maggiore 5</item>
    </string-array>
    <string-array name="drone_marca_modello">
        <item>marca 1 - modello 1</item>
        <item>marca 2 - modello 2</item>
        <item>marca 3 - modello 3</item>
    </string-array>
    <string-array name="drone_numero_motori">
        <item>4</item>
        <item>6</item>
        <item>8</item>
    </string-array>
    <string name="batteria_titolo">Crea batteria</string>
    <string name="batteria_drone">Drone:</string>
    <string name="batteria_codice">Numero batteria:</string>
    <string name="batteria_numero_celle">Numero celle:</string>
    <string name="batteria_amperaggio">Amperaggio (mAh):</string>
    <string name="batteria_moltiplicatore_scarica">Moltiplicatore scarica:</string>
    <string name="batteria_moltiplicatore_carica">Moltiplicatore carica:</string>
    <string name="batteria_valore_batteria_carica">Valore batteria carica (volt):</string>
    <string name="batteria_valore_batteria_scarica">Valore batteria scarica (volt):</string>
    <string name="batteria_valore_batteria_storage">Valore batteria in storage (volt):</string>
    <string name="batteria_cella">Cella:</string>
    <string name="batteria_valore_tensione_batteria_carica">Valore tensione a batteria carica:</string>
    <string name="batteria_valore_percentuale_efficienza">Valore in percentuale di efficienza:</string>
    <string name="batteria_inserisci_celle">Inserisci celle</string>
    <string name="batteria_pulsante">Conferma</string>
    <string name="main_seleziona_drone">Seleziona il drone utilizzato:</string>
    <string name="main_inizia_compilazione">Inizia compilazione QTB</string>
    <string name="loogbook_uno_titolo">Libretto di Volo</string>
    <string name="logbook_uno_data">Data:</string>
    <string name="logbook_uno_volume_di_volo">Volume di volo:</string>
    <string name="logbook_uno_luogo">Luogo:</string>
    <string name="logbook_uno_inserisci_gps">Inserisci coordinate GPS</string>
    <string name="logbook_uno_meteo">Meteo:</string>
    <string name="logbook_uno_vento">Vento:</string>
    <string name="logbook_uno_conferma">Conferma</string>
    <string name="logbook_due_titolo">Libretto di Volo</string>
    <string name="logbook_due_codice_identificativo">Codici identificativi</string>
    <string name="logbook_due_apr">Apr:</string>
    <string name="logbook_due_spr">Spr associati:</string>
    <string name="logbook_due_simulatore">Simulatore:</string>
    <string name="logbook_due_simulatore_utilizzato">Utilizzato</string>
    <string name="logbook_due_conferma">Conferma</string>
    <string name="logbook_tre_titolo">Libretto di Volo</string>
    <string name="logbook_tre_didascalia">Selezionare il tipo di attività e le modalità di volo</string>
    <string name="logbook_tre_tw_sperimentali">Sperimentali:</string>
    <string name="logbook_tre_sperimentali"></string>
    <string name="logbook_tre_tw_critiche">Critiche:</string>
    <string name="logbook_tre_critiche"></string>
    <string name="logbook_tre_tw_non_critiche">Non critiche:</string>
    <string name="logbook_tre_non_critiche"></string>
    <string name="logbook_tre_tw_addestramento">Addestramento:</string>
    <string name="logbook_tre_addestramento"></string>
    <string name="logbook_tre_tw_aggiornamento">Aggiornamento:</string>
    <string name="logbook_tre_aggiornamento"></string>
    <string name="logbook_tre_tw_vlos">Vlos:</string>
    <string name="logbook_tre_vlos"></string>
    <string name="logbook_tre_tw_blos">Blos</string>
    <string name="logbook_tre_blos"></string>
    <string name="logbook_tre_conferma">Conferma</string>
    <string name="logbook_quattro_titolo">Libretto di Volo</string>
    <string name="logbook_quattro_didascalia">Qui di seguito è richiesto l\'orario di take off e la durata della missione.\nIn caso di una durata della missione minore di cinque minuti (esempio: urgente cambio di batteria), è possibile inserire l\'orario e la durata della missione immediatamente successiva.</string>
    <string name="logbook_quattro_tv_orario_take_off">Orario take off:</string>
    <string name="logbook_quattro_orario_take_off">Premere qui per inserire</string>
    <string name="logbook_quattro_tv_orario_landing">Orario di landing</string>
    <string name="logbook_quattro_orario_landing"></string>
    <string name="logbook_quattro_tv_durata_missione_uno">Durata missione:</string>
    <string name="logbook_quattro_durata_missione_uno">Premere qui per inserire</string>
    <string name="logbook_quattro_tv_orario_take_off_due">Orario take off secondario:</string>
    <string name="logbook_quattro_orario_take_off_due">Premere qui per inserire</string>
    <string name="logbook_quattro_tv_orario_landing_due">Orario di landing secondario:</string>
    <string name="logbook_quattro_orario_landing_due"></string>
    <string name="logbook_quattro_tv_durata_missione_due">Durata missione secondaria:</string>
    <string name="logbook_quattro_durata_missione_due">Premere qui per inserire</string>
    <string name="logbook_quattro_tv_durata_missione">Durata missione totale:</string>
    <string name="logbook_quattro_durata_missione_totale">0</string>
    <string name="logbook_quattro_tv_tot_ore_volo">Totale ore di volo:</string>
    <string name="logbook_quattro_tot_ore_volo"></string>
    <string name="logbook_quattro_conferma">Conferma</string>
    <string name="sei_operatore_titolo">Sei un operatore?</string>
    <string name="sei_operatore_si">Sì</string>
    <string name="sei_operatore_no">No</string>
    <string name="sei_operatore_per">Voli per un operatore?</string>
    <string name="sei_operatore_conferma">Conferma</string>
    <string name="domanda_operatore_titolo">Sei operatore?</string>
    <string name="domanda_operatore_domanda_operatore">Voli in conto proprio o per un operatore?</string>
    <string name="domanda_operatore_operatore_si">In conto proprio</string>
    <string name="domanda_operatore_operatore_no">Per un operatore</string>
    <string name="domanda_operatore_domanda_critico">La missione è critica?</string>
    <string name="domanda_operatore_critico_si">Sì</string>
    <string name="domanda_operatore_critico_no">No</string>
    <string name="domanda_operatore_domanda_quale_operatore">Per quale operatore stai lavorando?</string>
    <string name="domanda_operatore_domanda_quale_macchina">Quale macchina stai utilizzando?</string>
    <string name="domanda_operatore_conferma">Conferma</string>
    <string name="domanda_operatore_quale_operatore">Per quale operatore voli?</string>
    <string name="domanda_operatore_seleziona_operatore">..seleziona operatore..</string>
    <string name="domanda_operatore_allerta_critico">Attenzione! Il drone deve essere abilitato per le missioni critiche!</string>
    <string name="crea_operatore_titolo">Quale tipo di operatore vuoi aggiungere?</string>
    <string name="crea_operatore_normale">Operatore normale</string>
    <string name="crea_operatore_critico">Operatore critico</string>
    <string name="crea_operatore_terzi">Operatore per terzi</string>
    <string name="crea_operatore_conferma">Conferma</string>
    <string name="crea_operatore_normale_titolo">Dati operatore</string>
    <string name="crea_operatore_normale_codice_enac">Codice E.N.A.C.:</string>
    <string name="crea_operatore_normale_scadenza">Scadenza:</string>
</resources>