<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:weightSum="1">

            <TextView
                android:text="@string/logbook_quattro_titolo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_logbook_quattro_titolo"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textAlignment="center"
                android:paddingBottom="10dp"/>

            <TextView
                android:text="@string/logbook_quattro_didascalia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_logbook_quattro_didascalia"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textAlignment="center"
                android:paddingBottom="0dp"
                android:layout_weight="1.42"/>

        </LinearLayout>

        <Button
            android:text="@string/logbook_quattro_conferma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/button_logbook_quattro_conferma"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="0dp"
            android:paddingTop="0dp"
            android:layout_above="@+id/button_logbook_quattro_conferma"
            android:layout_alignParentStart="true">

            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rowCount="6"
                android:columnCount="2">

                <TextView
                    android:text="@string/logbook_quattro_tv_durata_missione_uno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:id="@+id/textView_logbook_quattro_tv_durata_missione_uno"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textAlignment="center"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editText_logbook_quattro_durata_missione_uno"
                    />

                <TextView
                    android:text="@string/logbook_quattro_tv_orario_take_off"
                    android:id="@+id/textView_logbook_quattro_tv_ora_take_off"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textAlignment="center"/>

                <TextView
                    android:text="@string/logbook_quattro_orario_take_off"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:id="@+id/textView_logbook_quattro_ora_take_off"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:clickable="true"
                    android:onClick="settaOraTakeOffUno"/>

                <TextView
                    android:text="@string/logbook_quattro_tv_orario_landing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:id="@+id/textView_logbook_quattro_tv_ora_landing"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textAlignment="center"/>

                <TextView
                    android:text="@string/logbook_quattro_orario_landing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:id="@+id/textView_logbook_quattro_landing"
                    android:textAppearance="@android:style/TextAppearance.Small"/>

                <TextView
                    android:text="@string/logbook_quattro_tv_durata_missione_due"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:id="@+id/textView_logbook_quattro_tv_durata_missione_due"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textAlignment="center"
                    android:visibility="invisible"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editText_logbook_quattro_durata_missione_due"
                    android:visibility="invisible"/>

                <TextView
                    android:text="@string/logbook_quattro_tv_orario_take_off_due"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:id="@+id/textView_logbook_quattro_tv_ora_take_off_due"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textAlignment="center"
                    android:visibility="invisible"/>

                <TextView
                    android:text="@string/logbook_quattro_orario_take_off_due"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:id="@+id/textView_logbook_quattro_ora_take_off_due"
                    android:clickable="true"
                    android:onClick="settaOraTakeOffDue"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:visibility="invisible"/>

                <TextView
                    android:text="@string/logbook_quattro_tv_orario_landing_due"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:id="@+id/textView_logbook_quattro_tv_ora_landing_due"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textAlignment="center"
                    android:visibility="invisible"/>

                <TextView
                    android:text="@string/logbook_quattro_orario_landing_due"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:id="@+id/textView_logbook_quattro_landing_due"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:visibility="invisible"/>

                <TextView
                    android:text="@string/logbook_quattro_tv_durata_missione"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:id="@+id/textView_logbook_quattro_tv_durata_missione"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textAlignment="center"/>

                <TextView
                    android:text="@string/logbook_quattro_durata_missione_totale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:id="@+id/textView_logbook_quattro_durata_missione"
                    android:textAppearance="@android:style/TextAppearance.Medium"/>
            </GridLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="@string/logbook_quattro_tv_tot_ore_volo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_logbook_quattro_tv_tot_ore_volo"
                    android:layout_weight="1"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textAlignment="center"/>

                <TextView
                    android:text="@string/logbook_quattro_tot_ore_volo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_logbook_quattro_tot_ore_volo"
                    android:layout_weight="1"
                    android:textAppearance="@android:style/TextAppearance.Medium"/>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>