<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/brevetto_pratica_titolo"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/brevetto_pratica_intro"
        android:id="@+id/textView31"
        android:layout_gravity="center_horizontal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/brevetto_pratica_luogo"
            android:id="@+id/textView32"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_brevetto_pratica_luogo"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView32"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/brevetto_pratica_data"
            android:id="@+id/textView34"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/brevetto_pratica_campo_data"
            android:id="@+id/textView_dataView_pratica"
            android:focusable="false"
            android:onClick="settaDataPratica"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView34"
            android:clickable="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/brevetto_pratica_numero"
            android:id="@+id/textView33"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_brevetto_pratica_numero"
            android:inputType="number"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView33"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brevetto_pratica_conferma"
                android:id="@+id/button8"
                android:onClick="confermaBrevettoPratica"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="tornaABrevettoMain"
                android:text="@string/brevetto_pratica_annulla"
                android:id="@+id/button6"/>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>